src/main/metadata/objects/Attribute__c.object
<CustomObject>
    <description>Knowledge: this object is used to store Car Attribute</description>
    <fields>
        <fullName>Attribute_Category__c</fullName>
        <label>Attribute Category</label>
        <picklist>
            <picklistValues>
                <fullName>Basic parameters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension parameters</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attribute_Type__c</fullName>
        <label>Attribute Type</label>
        <picklist>
            <picklistValues>
                <fullName>AMG-specific equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C63AMG properties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL63 AMG performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size and weight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-metallic paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deluxe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deluxe LUXURY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic parameters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metallic paint (12000)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comfort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comfort 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comfort 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comfort COMFORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior trim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior trim EXTERIOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment and communications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAC_SourceId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External id field for migration purpose</description>
        <externalId>true</externalId>
        <label>CAC SourceId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Car Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attribute_Category__c</columns>
        <columns>Attribute_Type__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Car Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Attribute</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>